@@ -1,7 +1,7 @@
 /*
     IIP Generic Task Class
 
-    Copyright (C) 2006-2016 Ruven Pillay
+    Copyright (C) 2006-2017 Ruven Pillay
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -141,6 +141,7 @@ class OBJ : public Task {
   void horizontal_views();
   void vertical_views();
   void min_max_values();
+  void resolutions();
   void metadata( std::string field );
 
 };
